--- a/Src/View/PublicController/VerificationEmail.twig
+++ b/Src/View/PublicController/VerificationEmail.twig
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- Use the latest (edge) version of IE rendering engine -->
     <meta name="x-apple-disable-message-reformatting"> <!-- Disable auto-scale in iOS 10 Mail entirely -->
-    <title>Welcome - %recipient.softwarename%</title>
+    <title>Welcome - Maison Vie Driver</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,500" rel="stylesheet">
     <style>
         html,
@@ -141,25 +141,25 @@
 </head>
 <body width="100%" bgcolor="#F1F1F1" style="margin: 0; mso-line-height-rule: exactly;">
     <center style="width: 100%; background: #F1F1F1; text-align: left;">
-        <div style="display:none;font-size:1px;line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;mso-hide:all;font-family: sans-serif;">Verify your %recipient.softwarename% Account email. </div>
+        <div style="display:none;font-size:1px;line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;mso-hide:all;font-family: sans-serif;">Verify your Maison Vie Driver Account email. </div>
         <div style="max-width: 680px; margin: auto;" class="email-container">
             <table role="presentation" cellspacing="0" cellpadding="0" border="0" align="center" width="100%" style="max-width: 680px;" class="email-container">
                 <tbody><tr>
                     <td bgcolor="#333333">
                         <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
                             <tbody><tr>
-                                <td style="padding: 30px 40px 30px 40px; text-align: center;"> <span style="color:#fff; font-size: 30px">WELCOME %recipient.softwarename%</span> </td>
+                                <td style="padding: 30px 40px 30px 40px; text-align: center;"> <span style="color:#fff; font-size: 30px">WELCOME Maison Vie Driver</span> </td>
                             </tr>
                         </tbody></table>
                     </td>
                 </tr>
-                
+               
                 <tr>
                     <td bgcolor="#ffffff">
                         <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
                             <tbody><tr>
                                 <td style="padding: 40px 40px 20px 40px; text-align: left;">
-                                    <h1 style="margin: 0; font-family: 'Montserrat', sans-serif; font-size: 20px; line-height: 26px; color: #333333; font-weight: bold;">Please verify your %recipient.softwarename% Account email </h1>
+                                    <h1 style="margin: 0; font-family: 'Montserrat', sans-serif; font-size: 20px; line-height: 26px; color: #333333; font-weight: bold;">Please verify your Maison Vie Driver Account email </h1>
                                 </td>
                             </tr>
 
@@ -173,7 +173,7 @@
                                     </tbody></table></td>
                                                             </tr><tr>
                                 <td style="padding: 20px 40px 20px 40px;font-family: sans-serif;font-size: 13px;line-height: 20px;color: #555555;text-align: left;">
-                                    <p style="margin: 0;">You're receiving this e-mail because you registred in %recipient.softwarename% with this email. </p>
+                                    <p style="margin: 0;">You're receiving this e-mail because you registred in Maison Vie Driver with this email. </p>
                                 </td>
                             </tr><tr>
                                 <td style="padding: 0px 40px 20px 40px; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555; text-align: left; font-weight:bold;">
@@ -183,7 +183,7 @@
 
                             <tr>
                                 <td style="padding: 0px 40px 20px 40px; font-family: sans-serif; font-size: 12px; line-height: 20px; color: #555555; text-align: left; font-weight:normal;">
-                                   <b> Best regards</b>, <br>%recipient.softwarename%
+                                   <b> Best regards</b>, <br>Maison Vie Driver
 
                                 </td>
                             </tr>
