--- a/Src/View/PublicController/resetpassword.twig
+++ b/Src/View/PublicController/resetpassword.twig
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- Use the latest (edge) version of IE rendering engine -->
     <meta name="x-apple-disable-message-reformatting"> <!-- Disable auto-scale in iOS 10 Mail entirely -->
-    <title>Welcome - %recipient.softwarename%</title>
+    <title>Welcome - Maison Vie Driver</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,500" rel="stylesheet">
     <style>
         html,
@@ -141,14 +141,14 @@
 </head>
 <body width="100%" bgcolor="#F1F1F1" style="margin: 0; mso-line-height-rule: exactly;">
     <center style="width: 100%; background: #F1F1F1; text-align: left;">
-        <div style="display:none;font-size:1px;line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;mso-hide:all;font-family: sans-serif;"> Password reset for your %recipient.softwarename% account. </div>
+        <div style="display:none;font-size:1px;line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;mso-hide:all;font-family: sans-serif;"> Password reset for your Maison Vie Driver account. </div>
         <div style="max-width: 680px; margin: auto;" class="email-container">
             <table role="presentation" cellspacing="0" cellpadding="0" border="0" align="center" width="100%" style="max-width: 680px;" class="email-container">
                 <tbody><tr>
                     <td bgcolor="#333333">
                         <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
                             <tbody><tr>
-                                <td style="padding: 30px 40px 30px 40px; text-align: center;"> <span style="color:#fff; font-size: 30px">%recipient.softwarename%</span> </td>
+                                <td style="padding: 30px 40px 30px 40px; text-align: center;"> <span style="color:#fff; font-size: 30px">Maison Vie Driver</span> </td>
                             </tr>
                         </tbody></table>
                     </td>
@@ -193,7 +193,7 @@ If you made this change, you're all set.</p>
 
                             <tr>
                                 <td style="padding: 0px 40px 20px 40px; font-family: sans-serif; font-size: 12px; line-height: 20px; color: #555555; text-align: left; font-weight:normal;">
-                                   <b> Best regards</b>, <br>%recipient.softwarename%
+                                   <b> Best regards</b>, <br>Maison Vie Driver
 
                                 </td>
                             </tr>
