--- a/Src/View/PublicController/InvitationEmail.twig
+++ b/Src/View/PublicController/InvitationEmail.twig
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- Use the latest (edge) version of IE rendering engine -->
     <meta name="x-apple-disable-message-reformatting"> <!-- Disable auto-scale in iOS 10 Mail entirely -->
-    <title>Welcome - %recipient.softwarename%</title>
+    <title>Welcome - Maison Vie Driver</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,500" rel="stylesheet">
     <style>
         html,
@@ -142,14 +142,14 @@
 
 <body width="100%" bgcolor="#F1F1F1" style="margin: 0; mso-line-height-rule: exactly;">
     <center style="width: 100%; background: #F1F1F1; text-align: left;">
-        <div style="display:none;font-size:1px;line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;mso-hide:all;font-family: sans-serif;"> Invited to join %recipient.softwarename% team. </div>
+        <div style="display:none;font-size:1px;line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;mso-hide:all;font-family: sans-serif;"> Invited to join Maison Vie Driver team. </div>
         <div style="max-width: 680px; margin: auto;" class="email-container">
             <table role="presentation" cellspacing="0" cellpadding="0" border="0" align="center" width="100%" style="max-width: 680px;" class="email-container">
                 <tbody><tr>
                     <td bgcolor="#333333">
                         <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
                             <tbody><tr>
-                                <td style="padding: 30px 40px 30px 40px; text-align: center;"> <span style="color:#fff; font-size: 30px">WELCOME %recipient.softwarename%</span> </td>
+                                <td style="padding: 30px 40px 30px 40px; text-align: center;"> <span style="color:#fff; font-size: 30px">WELCOME Maison Vie Driver</span> </td>
                             </tr>
                         </tbody></table>
                     </td>
@@ -160,14 +160,14 @@
                         <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
                             <tbody><tr>
                                 <td style="padding: 40px 40px 20px 40px; text-align: left;">
-                                    <h1 style="margin: 0; font-family: 'Montserrat', sans-serif; font-size: 20px; line-height: 26px; color: #333333; font-weight: bold;">Dear Friend, You've been invited to join %recipient.softwarename% team.</h1>
+                                    <h1 style="margin: 0; font-family: 'Montserrat', sans-serif; font-size: 20px; line-height: 26px; color: #333333; font-weight: bold;">Dear Friend, You've been invited to join Maison Vie Driver team.</h1>
                                 </td>
                             </tr>
 
                             <tr>
                                 <td style="padding: 20px 40px 20px 40px;font-family: sans-serif;font-size: 13px;line-height: 20px;color: #555555;text-align: left;">
                                     <p style="margin: 0;">This means you'll be able to enjoy all the benefits of the company.
-Please accept this invitation within six days.</p>
+You can use this code to on the verification page.</p>
                                 </td>
                             </tr>
 							
@@ -176,10 +176,8 @@ Please accept this invitation within six days.</p>
 <table role="presentation" align="center" cellspacing="0" cellpadding="0" border="0" class="center-on-narrow">
                                         <tbody>
 										<tr>
-                                                                <td style="border-radius: 50px;background: #26a4d3;text-align: center;" class="button-td"> <a href="%recipient.url%" style="background: #26a4d3;border: 15px solid #26a4d3;font-family: 'Montserrat', sans-serif;font-size: 14px;line-height: 1.1;text-align: center;text-decoration: none;display: block;border-radius: 50px;font-weight: bold;" class="button-a"> <span style="color:#ffffff;" class="button-link">&nbsp;&nbsp;&nbsp;&nbsp;Accept invitation &nbsp;&nbsp;&nbsp;&nbsp;</span> </a> </td>
+                                                                <td style="text-align: center;"> <b>Your invite code is</b>&nbsp;&nbsp;&nbsp;<code style="background: #F1F1F1;text-align: center;padding:5px 15px 5px 15px" >%recipient.key%</code> </td>
                                                             </tr>
-															
-									
                                     </tbody></table></td>
                                                             </tr>
 															<tr>
@@ -190,7 +188,7 @@ Please accept this invitation within six days.</p>
 
                             <tr>
                                 <td style="padding: 0px 40px 20px 40px; font-family: sans-serif; font-size: 12px; line-height: 20px; color: #555555; text-align: left; font-weight:normal;">
-                                   <b> Best regards</b>, <br>%recipient.softwarename%
+                                   <b> Best regards</b>, <br>Maison Vie Driver
 
                                 </td>
                             </tr>
